Fixes alignment of name-div

--- a/src/app/home/home-page/home-page.component.scss
+++ b/src/app/home/home-page/home-page.component.scss
@@ -45,6 +45,7 @@ a {
 }
 .name-div {
   margin: 0;
+  height: 16px;
 }
 .status-div {
   margin: 0;
